--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -1,14 +1,37 @@
-#main-frame {
-    position: absolute;
-    left: 50%;
-    top: 10%;
-    transform: translate(-50%);
+#app {
+    margin-top: 3%;
     display: flex;
     column-gap: 5%;
     width: 80%;
     flex-wrap: wrap;
     flex-direction: row;
     background-color: white;
+    height: 80%;
 }
 
+.create-todo-modal {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+}
 
+.app_container {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.create-todo-modal__submit {
+    background: #A23200;
+    border-radius: 32px;
+    width: 100%;
+    height: 48px;
+    border: 0;
+    outline: none;
+    color: white;
+    cursor: pointer;
+}
