--- a/src/pages/main/components/TodoList/TodoList.css
+++ b/src/pages/main/components/TodoList/TodoList.css
@@ -20,3 +20,15 @@
         flex-basis: 100%;
     }
 }
+
+.todo-list__plus {
+    color: black;
+    background-color: white;
+    border: 1px solid #A7A7A7;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
