--- a/src/pages/main/components/Modal/Modal.css
+++ b/src/pages/main/components/Modal/Modal.css
@@ -6,17 +6,17 @@
     width: 60%;
     height: fit-content;
     position: relative;
-    padding: 4%;
+    padding: 40px;
 }
 
 .modal-container {
     background-color: rgba(0,0,0,0.1);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
     position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
+    overflow: hidden;
     outline: none;
     border: 0;
     display: flex;
@@ -34,7 +34,13 @@
     cursor: pointer;
 }
 
-.q{
+.modal__content{
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 700px){
+    .modal {
+        padding: 20px;
+    }
 }
