--- a/src/pages/main/components/TodoList/TodoList.css
+++ b/src/pages/main/components/TodoList/TodoList.css
@@ -2,8 +2,8 @@
     border: 1px solid #9D9D9D;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     overflow-y: auto;
-    min-height: 80vh;
-    width: 30vw;
+    min-height: 600px;
+    max-width: 450px;
     flex-basis: 30%;
 }
 
@@ -31,4 +31,5 @@
     display: flex;
     justify-content: center;
     padding: 10px;
+    width: 100%;
 }
