--- a/src/pages/main/components/TodoList/TodoList.css
+++ b/src/pages/main/components/TodoList/TodoList.css
@@ -1,10 +1,11 @@
 .todo-list-container {
     border: 1px solid #9D9D9D;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    overflow-y: auto;
-    min-height: 600px;
+    height: fit-content;
+    min-height: 500px;
     max-width: 450px;
     flex-basis: 30%;
+    margin-bottom: 50px;
 }
 
 .todo-list__header {
@@ -16,7 +17,7 @@
 
 @media (max-width: 700px){
     .todo-list-container {
-        margin-bottom: 50px;
+        
         flex-basis: 100%;
     }
 }
