--- a/src/pages/main/components/TodoList/TodoList.css
+++ b/src/pages/main/components/TodoList/TodoList.css
@@ -3,7 +3,7 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     height: fit-content;
     min-height: 500px;
-    max-width: 450px;
+    max-width: 300px;
     flex-basis: 30%;
     margin-bottom: 50px;
 }
@@ -17,7 +17,6 @@
 
 @media (max-width: 700px){
     .todo-list-container {
-        
         flex-basis: 100%;
     }
 }
@@ -33,4 +32,8 @@
     justify-content: center;
     padding: 10px;
     width: 100%;
+}
+
+.todo-list__content {
+    min-height: 50px;
 }
